--- a/css/style.css
+++ b/css/style.css
@@ -201,7 +201,7 @@ input {
     margin-bottom: 10px;
 }
 
-.course__counter-line, 
+.course__counter-line,
 .course__progress-label {
     color: #FFFFFF40;
 }
@@ -383,7 +383,7 @@ progress::-moz-progress-value {
 }
 
 .program-line {
-    display: flex;    
+    display: flex;
     justify-content: space-between;
     width: 750px;
 }
@@ -567,6 +567,7 @@ progress::-moz-progress-value {
 }
 
 .modal__inner {
+    position: relative;
     width: 66.3rem;
     padding: 9rem 9.5rem;
     background: #2C2C2C;
@@ -630,6 +631,17 @@ progress::-moz-progress-value {
     overflow: hidden !important;
     height: 100% !important;
 }
+
+.modal__close {
+    width: 5rem;
+    height: 5 rem;
+    position: absolute;
+    top: 2rem;
+    right: 2rem;
+    cursor: pointer;
+}
+
+
 
 /*сетка*/
 @media (max-width: 108em) {
